--- a/package.json
+++ b/package.json
@@ -31,7 +31,8 @@
     "core-js": "^2.4.1",
     "rxjs": "5.0.1",
     "zone.js": "^0.7.4",
-    "typescript": "~2.0.10"
+    "typescript": "~2.0.10",
+    "concurrently": "^3.1.0"
   },
   "devDependencies": {
     "concurrently": "^3.1.0",
