--- a/package.json
+++ b/package.json
@@ -36,6 +36,20 @@
     "lite-server": "^2.2.2",
     "http-server": "^0.9.0",
     "@types/node": "^6.0.46",
+    "@types/body-parser": "^0.0.32",
+    "@types/compression": "^0.0.33",
+    "@types/cors": "^0.0.33",
+    "@types/express": "^4.0.32",
+    "@types/jasmine": "^2.2.30",
+    "@types/jsonwebtoken": "^7.1.31",
+    "@types/node-uuid": "^0.0.28",
+    "body-parser": "~1.13.2",
+    "compression": "^1.6.2",
+    "cookie-parser": "~1.3.5",
+    "core-js": "^2.4.1",
+    "express": "^4.13.4",
+    "express-jwt": "^3.3.0",
+    "node-uuid": "^1.4.7",
     "tslint": "^3.15.1",
     "canonical-path": "0.0.2",
     "lodash": "^4.16.4",
